--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://ansarker.github.io/iansarker/",
-  "name": "iansarker",
+  "homepage": "https://dev-gaju.github.io/",
+  "name": "dev-gaju",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
