--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dev-gaju.github.io/",
+  "homepage": "https://dev-gaju.github.io/myself",
   "name": "dev-gaju",
   "version": "0.1.0",
   "private": true,
