--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dev-gaju.github.io/myself/",
+  "homepage": "https://dev-gaju.github.io/myself",
   "name": "myself",
   "version": "0.1.0",
   "private": true,
