--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dev-gaju.github.io/myself",
+  "homepage": "https://Dev-Gaju.github.io/myself",
   "name": "myself",
   "version": "0.1.0",
   "private": true,
@@ -17,7 +17,7 @@
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "react-scroll": "^1.8.4"
   },
   "scripts": {
